open add window when open button is clicked

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
   <body>
     <div class="container">
       <h1 class="text-muted text-center my-3">To-Do <small>List</small></h1>
-      <button class="btn btn-outline-primary">Create New Todo</button>
+      <button class="btn btn-outline-primary" id="openAddWindow">
+        Create New Todo
+      </button>
     </div>
 
     <ul class="todo list-group container mt-3">
