Add and Delete Todo List Item

--- a/src/add.html
+++ b/src/add.html
@@ -24,5 +24,7 @@
 
       <button class="btn btn-outline-primary float-right">Save</button>
     </form>
+
+    <script src="add.js"></script>
   </body>
 </html>
