--- a/src/index.html
+++ b/src/index.html
@@ -21,19 +21,12 @@
   <body>
     <div class="container">
       <h1 class="text-muted text-center my-3">To-Do <small>List</small></h1>
-      <button class="btn btn-outline-primary" id="openAddWindow">
+      <button class="btn btn-outline-primary" id="createTodoBtn">
         Create New Todo
       </button>
     </div>
 
-    <ul class="todo list-group container mt-3">
-      <li class="list-group-item ">
-        Hello world<a class="float-right text-muted close">&times;</a>
-      </li>
-      <li class="list-group-item ">
-        Hello world<a class="float-right text-muted close">&times;</a>
-      </li>
-    </ul>
+    <ul class="list-group container my-3" id="todoList"></ul>
     <script src="index.js"></script>
   </body>
 </html>
